# photo-manager

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  hash_cache.rs  main.rs  scanner.rs
src/components/: PhotoCard.tsx  PhotoGrid.tsx  PhotoList.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
src/hooks/: useSortedPhotos.ts
src/store/: photoStore.ts
src/utils/: format.ts  smartSelect.ts
