[package]
name = "photo-manager"
version = "0.1.0"
description = "A local-only photo management application"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "protocol-asset", "dialog-open", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
image = "0.25"
walkdir = "2.4"
trash = "4.1"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

